fix the bug in draw marker on map when query returns